--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
   "author": "Dmytro Poliuliuk",
   "license": "ISC",
   "devDependencies": {
+    "clean-webpack-plugin": "^4.0.0",
     "html-webpack-plugin": "^5.5.0",
     "webpack": "^5.72.1",
     "webpack-cli": "^4.9.2"
